algebra-database-in-Java/MyRelation.java
/* Generated By:JavaCC: Do not edit this line. MyRelation.java */
import java.io.File;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.HashMap;
import java.util.List;
import java.util.Map.Entry;
import java.util.Collections;
import java.util.Scanner;
import java.util.Set;
import java.util.ArrayList;
public class MyRelation implements MyRelationConstants {
  public static Relation getparseresult(String args,HashMap<String,Relation> relations) throws Exception
  {
    MyRelation parse = new MyRelation(new java.io.StringReader(args));
    Relation r = parse.Query(relations);
    return r;
  }

  final public Relation Query(HashMap<String,Relation> relations) throws ParseException {
    trace_call("Query");
    try {
  Relation query= null;
  Relation set=null;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RENAME:
        set = SetClause(relations);
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SIGMA:
          case PI:
          case Y:
          case RENAME:
          case OPEN_PAR:
          case NAME:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          query = Query(relations);
        }
        jj_consume_token(0);
     {if (true) return Relation.rename(set,query);}
        break;
      case SIGMA:
      case PI:
      case Y:
      case OPEN_PAR:
      case NAME:
        query = SuperRelation(relations);
        jj_consume_token(0);
    {if (true) return query;}
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Query");
    }
  }

  final public Relation SetClause(HashMap<String,Relation> relations) throws ParseException {
    trace_call("SetClause");
    try {
  ArrayList<String> rename=new ArrayList<String>();
  Relation exp = null;
  Relation stored = null;
      rename = RenameClause();
      exp = SuperRelation(relations);
  stored=Relation.storeOneRelation(relations,exp,rename);
  {if (true) return stored;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("SetClause");
    }
  }

  final public Relation SuperRelation(HashMap<String,Relation> relations) throws ParseException {
    trace_call("SuperRelation");
    try {
  Relation exp1 = null;
  Relation exp2 = null;
  ArrayList<ArrayList<ArrayList<String>>> select = new ArrayList<ArrayList<ArrayList<String>>>();
  ArrayList<ArrayList<ArrayList<String>>> join=new ArrayList<ArrayList<ArrayList<String>>>();
  ArrayList<ArrayList< String>> proj=new ArrayList<ArrayList< String>>();
  ArrayList<String> groupby=new ArrayList<String>();
  ArrayList<ArrayList< String>> functions=new ArrayList<ArrayList< String>>();
  Relation temp=null;
      if (jj_2_1(3)) {
        jj_consume_token(OPEN_PAR);
        exp1 = SuperRelation(relations);
        jj_consume_token(CLOSE_PAR);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case JOIN:
          case CARTPROD:
          case INTERSECTION:
          case UNION:
          case MINUS:
          case DIVIDE:
            ;
            break;
          default:
            jj_la1[2] = jj_gen;
            break label_2;
          }
          join = JoinCardiClause();
          exp2 = SuperRelation(relations);
        }
     {if (true) return Relation.joinclause(exp1,exp2,join);}
      } else if (jj_2_2(3)) {
        exp1 = BasicRelationExpression(relations);
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case JOIN:
          case CARTPROD:
          case INTERSECTION:
          case UNION:
          case MINUS:
          case DIVIDE:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_3;
          }
          join = JoinCardiClause();
          exp2 = SuperRelation(relations);
        }
     {if (true) return Relation.joinclause(exp1,exp2,join);}
      } else if (jj_2_3(3)) {
        select = SelectClause();
        jj_consume_token(OPEN_PAR);
        exp1 = SuperRelation(relations);
        jj_consume_token(CLOSE_PAR);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case JOIN:
          case CARTPROD:
          case INTERSECTION:
          case UNION:
          case MINUS:
          case DIVIDE:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_4;
          }
          join = JoinCardiClause();
          exp2 = SuperRelation(relations);
        }
    temp=Relation.selectmethod(select,exp1);
   {if (true) return Relation.joinclause(temp,exp2,join);}
      } else if (jj_2_4(3)) {
        proj = ProjectClause();
        jj_consume_token(OPEN_PAR);
        exp1 = SuperRelation(relations);
        jj_consume_token(CLOSE_PAR);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case JOIN:
          case CARTPROD:
          case INTERSECTION:
          case UNION:
          case MINUS:
          case DIVIDE:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_5;
          }
          join = JoinCardiClause();
          exp2 = SuperRelation(relations);
        }
    temp=Relation.project(proj,exp1);
   {if (true) return Relation.joinclause(temp,exp2,join);}
      } else if (jj_2_5(3)) {
        groupby = GroupbyClause();
        functions = FunctionClause();
        jj_consume_token(OPEN_PAR);
        exp1 = SuperRelation(relations);
        jj_consume_token(CLOSE_PAR);
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case JOIN:
          case CARTPROD:
          case INTERSECTION:
          case UNION:
          case MINUS:
          case DIVIDE:
            ;
            break;
          default:
            jj_la1[6] = jj_gen;
            break label_6;
          }
          join = JoinCardiClause();
          exp2 = SuperRelation(relations);
        }
    temp=Relation.groupby(groupby,functions,exp1);
   {if (true) return Relation.joinclause(temp,exp2,join);}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("SuperRelation");
    }
  }

  final public ArrayList<String> GroupbyClause() throws ParseException {
    trace_call("GroupbyClause");
    try {
  ArrayList<String>attrilist=new ArrayList<String>();
      if (jj_2_6(3)) {
        jj_consume_token(Y);
        jj_consume_token(OPEN_PAR);
        jj_consume_token(CLOSE_PAR);
   {if (true) return attrilist;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case Y:
          jj_consume_token(Y);
          jj_consume_token(OPEN_PAR);
          attrilist = ListofAttr(attrilist);
          jj_consume_token(CLOSE_PAR);
    {if (true) return attrilist;}
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("GroupbyClause");
    }
  }

  final public ArrayList<ArrayList< String>> FunctionClause() throws ParseException {
    trace_call("FunctionClause");
    try {
  ArrayList<ArrayList< String>> functions=new ArrayList<ArrayList< String>>();
      jj_consume_token(FUNCTION);
      jj_consume_token(OPEN_PAR);
      functions = AllFunctions(functions);
      jj_consume_token(CLOSE_PAR);
    {if (true) return functions;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("FunctionClause");
    }
  }

  final public ArrayList<ArrayList< String>> AllFunctions(ArrayList<ArrayList< String>> list) throws ParseException {
    trace_call("AllFunctions");
    try {
  ArrayList< String> onefunction= new ArrayList< String>();
  ArrayList<ArrayList< String>> list2= new ArrayList<ArrayList< String>>();
  Token functionname;
  Token attri;
      functionname = jj_consume_token(NAME);
      jj_consume_token(OPEN_PAR);
      attri = jj_consume_token(NAME);
      jj_consume_token(CLOSE_PAR);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_7;
        }
        jj_consume_token(COMMA);
        list2 = AllFunctions(list);
      }
    onefunction.add(functionname.image);
    onefunction.add(attri.image);
    list.add(onefunction);
    {if (true) return list;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("AllFunctions");
    }
  }

  final public ArrayList<String> RenameClause() throws ParseException {
    trace_call("RenameClause");
    try {
  ArrayList<String> attrilist=new ArrayList<String>();
  Token name;
      if (jj_2_7(3)) {
        jj_consume_token(RENAME);
        name = jj_consume_token(NAME);
        jj_consume_token(OPERATOR);
    attrilist.add(name.image);
    {if (true) return attrilist;}
      } else if (jj_2_8(3)) {
        jj_consume_token(RENAME);
        name = jj_consume_token(NAME);
        jj_consume_token(OPEN_PAR);
        attrilist = ListofAttr(attrilist);
        jj_consume_token(CLOSE_PAR);
        jj_consume_token(OPERATOR);
    Collections.reverse(attrilist);
    attrilist.add(name.image);
    {if (true) return attrilist;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("RenameClause");
    }
  }

  final public ArrayList<ArrayList<String>> ProjectClause() throws ParseException {
    trace_call("ProjectClause");
    try {
  ArrayList<ArrayList<String>> project=new ArrayList<ArrayList<String>>();
  ArrayList<ArrayList<String>> list=new ArrayList<ArrayList<String>>();
      jj_consume_token(PI);
      jj_consume_token(OPEN_PAR);
      project = ProjAttr(list);
      jj_consume_token(CLOSE_PAR);
    {if (true) return project;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ProjectClause");
    }
  }

  final public ArrayList<ArrayList<String>> ProjAttr(ArrayList<ArrayList<String>> list) throws ParseException {
    trace_call("ProjAttr");
    try {
  Token rel;
  Token attr;
  ArrayList<String> element=new ArrayList<String>();
  ArrayList<ArrayList<String>> list2=new ArrayList<ArrayList<String>>();
      if (jj_2_9(2)) {
        rel = jj_consume_token(NAME);
        jj_consume_token(DOT);
        attr = jj_consume_token(NAME);
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_8;
          }
          jj_consume_token(COMMA);
          list2 = ProjAttr(list);
        }
    element.add(rel.image);
    element.add(attr.image);
    list.add(element);
    {if (true) return list;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NAME:
          attr = jj_consume_token(NAME);
          label_9:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case COMMA:
              ;
              break;
            default:
              jj_la1[10] = jj_gen;
              break label_9;
            }
            jj_consume_token(COMMA);
            list2 = ProjAttr(list);
          }
    element.add(attr.image);
    list.add(element);
    {if (true) return list;}
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ProjAttr");
    }
  }

  final public ArrayList<String> ListofAttr(ArrayList<String> list) throws ParseException {
    trace_call("ListofAttr");
    try {
  Token attr;
  ArrayList<String> list2=new ArrayList<String>();
      attr = jj_consume_token(NAME);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_10;
        }
        jj_consume_token(COMMA);
        list2 = ListofAttr(list);
      }
    list.add(attr.image);
    {if (true) return list;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ListofAttr");
    }
  }

  final public ArrayList<ArrayList<ArrayList<String>>> SelectClause() throws ParseException {
    trace_call("SelectClause");
    try {
  ArrayList<ArrayList<ArrayList<String>>> allcondilist=new ArrayList<ArrayList<ArrayList<String>>>();
      jj_consume_token(SIGMA);
      jj_consume_token(OPEN_PAR);
      allcondilist = Expressionforjoin(allcondilist);
      jj_consume_token(CLOSE_PAR);
    {if (true) return allcondilist;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("SelectClause");
    }
  }

  final public ArrayList<String> Operator() throws ParseException {
    trace_call("Operator");
    try {
  Token operator;
  ArrayList<String> list=new ArrayList<String>();
  String s1="operator";
      operator = jj_consume_token(OPERATOR);
    list.add(s1);
    list.add(operator.image);
    {if (true) return list;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Operator");
    }
  }

  final public ArrayList<ArrayList<ArrayList<String>>> JoinCardiClause() throws ParseException {
    trace_call("JoinCardiClause");
    try {
  ArrayList<ArrayList<ArrayList<String>>> allcondilist=new ArrayList<ArrayList<ArrayList<String>>>();
  ArrayList<ArrayList<String>> templist2=new ArrayList<ArrayList<String>>();
  ArrayList<String> templist1=new ArrayList<String>();
  String s;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CARTPROD:
        jj_consume_token(CARTPROD);
    {if (true) return allcondilist;}
        break;
      case UNION:
        jj_consume_token(UNION);
  s="union";
  templist1.add(s);
  templist2.add(templist1);
  allcondilist.add(templist2);
  {if (true) return allcondilist;}
        break;
      case INTERSECTION:
        jj_consume_token(INTERSECTION);
  s="intersection";
  templist1.add(s);
  templist2.add(templist1);
  allcondilist.add(templist2);
  {if (true) return allcondilist;}
        break;
      case MINUS:
        jj_consume_token(MINUS);
  s="minus";
  templist1.add(s);
  templist2.add(templist1);
  allcondilist.add(templist2);
  {if (true) return allcondilist;}
        break;
      case DIVIDE:
        jj_consume_token(DIVIDE);
  s="divide";
  templist1.add(s);
  templist2.add(templist1);
  allcondilist.add(templist2);
  {if (true) return allcondilist;}
        break;
      case JOIN:
        jj_consume_token(JOIN);
        jj_consume_token(OPEN_PAR);
        allcondilist = Expressionforjoin(allcondilist);
        jj_consume_token(CLOSE_PAR);
    {if (true) return allcondilist;}
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("JoinCardiClause");
    }
  }

  final public ArrayList<ArrayList<ArrayList<String>>> Expressionforjoin(ArrayList<ArrayList<ArrayList<String>>> allcondilist) throws ParseException {
    trace_call("Expressionforjoin");
    try {
  ArrayList<ArrayList<String>> condilist1= new ArrayList<ArrayList<String>>();
  ArrayList<ArrayList<ArrayList<String>>> condilist2= new ArrayList<ArrayList<ArrayList<String>>>();
      condilist1 = Conditionforjoin();
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_11;
        }
        jj_consume_token(AND);
        condilist2 = Expressionforjoin(allcondilist);
      }
      allcondilist.add(condilist1);
    {if (true) return allcondilist;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Expressionforjoin");
    }
  }

  final public ArrayList<ArrayList<String>> Conditionforjoin() throws ParseException {
    trace_call("Conditionforjoin");
    try {
  ArrayList<ArrayList<String>> conditionlist = new ArrayList<ArrayList<String>>();
  ArrayList<String> left = new ArrayList<String>();
  ArrayList<String> right = new ArrayList<String>();
  ArrayList<String> operator=new ArrayList<String>();
      left = Elementforjoin();
      operator = Operator();
      right = Elementforjoin();
    conditionlist.add(left);
    conditionlist.add(operator);
    conditionlist.add(right);
    {if (true) return conditionlist;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Conditionforjoin");
    }
  }

  final public ArrayList<String> Elementforjoin() throws ParseException {
    trace_call("Elementforjoin");
    try {
  Token rel;
  Token attr;
  ArrayList<String> list=new ArrayList<String>();
  String s1="";
  String s2="";
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIGITS:
        rel = jj_consume_token(DIGITS);
   s1="number";
    list.add(s1);
    list.add(rel.image);
  {
  {if (true) return list;}
  }
        break;
      default:
        jj_la1[15] = jj_gen;
        if (jj_2_10(2)) {
          rel = jj_consume_token(NAME);
          jj_consume_token(DOT);
          attr = jj_consume_token(NAME);
   s1="relationname";
   s2="attributename";
    list.add(s1);
    list.add(rel.image);
    list.add(s2);
    list.add(attr.image);
    {if (true) return list;}
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case QUO:
            jj_consume_token(QUO);
            rel = jj_consume_token(NAME);
            jj_consume_token(QUO);
    s1="string";
    list.add(s1);
    list.add(rel.image);
    {if (true) return list;}
            break;
          case NAME:
            rel = jj_consume_token(NAME);
    s1="attributename";
    list.add(s1);
    list.add(rel.image);
    {if (true) return list;}
            break;
          default:
            jj_la1[16] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Elementforjoin");
    }
  }

  final public Relation BasicRelationExpression(HashMap<String,Relation> relations) throws ParseException {
    trace_call("BasicRelationExpression");
    try {
  Token relationName;
  Relation thisRelation = null;
  Relation followRelation = null;
  ArrayList<ArrayList<ArrayList<String>>> allcondilist=new ArrayList<ArrayList<ArrayList<String>>>();
      relationName = jj_consume_token(NAME);
    thisRelation=Relation.getrelationbyname(relations,relationName.image);
    {if (true) return thisRelation;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("BasicRelationExpression");
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }
